# tree-sitter-sdml

./: .gitignore  .mise.toml  .npmignore  CHANGES.md  CNAME  Cargo.toml  Makefile  Package.swift  README.md  TODO.org  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: generate.yml  parse-examples.yml  parser-update.yml  release-packages.yml  release.yml  static.yml  test.yml  tree-sitter.yml
bindings/c/: tree-sitter-sdml.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/: dist_name.py
bindings/python/tree_sitter_sdml/: __init__.py  binding.c
bindings/rust/: grammar.rs  lib.rs
bindings/swift/TreeSitterSdml/: sdml.h
docs/: build.org  constraint-library.org  constraint-semantics.org  constraints-to-cl.org  constraints.html  constraints.org  data-modeling.org  implementation.org  index.html  index.org  introduction.org  rdf-model.org  rentals-1.sdm  rentals-2.sdm  rentals-3.sdm  rentals-4.sdm  rentals-5.sdm  resolver-catalog.org  sdml-io.css  sdml-owl.ttl  sdml.ebnf  sdml.html  sdml.org  std-library.org  surface-grammar.org  surface-syntax.org  surface-to-rdf.org  tools.org  transforms.org  uml-profile.html  uml-profile.org  unicode.org  uri-prefixes.org  walk-through.org
examples/: another.sdm  constraints.sdm  datatypes.sdm  dimensions.sdm  escaped_strings.sdm  imports.sdm  indentation.sdm  labelled.sdm  metrics.sdm  properties.sdm  rdf_schema.sdm  sdml_sequence_ordered.sdm  simple.sdm
queries/: folds.scm  highlights.scm  indent.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/: simple.sdm
test/corpus/: annotation_escaped_strings.sdm  annotation_multiple_as_list.sdm  annotation_multiple_as_set.sdm  annotation_multiple_decimal.sdm  annotation_multiple_double.sdm  annotation_multiple_integer.sdm  annotation_multiple_iri.sdm  annotation_multiple_language_string.sdm  annotation_multiple_ordered.sdm  annotation_multiple_rational.sdm  annotation_multiple_separate.sdm  annotation_multiple_string.sdm  annotation_multiple_unique.sdm  annotation_single_binary.sdm  annotation_single_boolean.sdm  annotation_single_constructor.sdm  annotation_single_decimal.sdm  annotation_single_double.sdm  annotation_single_empty_seq.sdm  annotation_single_integer.sdm  annotation_single_iri.sdm  annotation_single_language_string.sdm  annotation_single_mapping.sdm  annotation_single_rational.sdm  annotation_single_string.sdm  cardinality_exactly_one.sdm  cardinality_one_to_many.sdm  cardinality_two_to_eight.sdm  cardinality_zero_to_many.sdm  cardinality_zero_to_many_as_list.sdm  cardinality_zero_to_many_as_set.sdm  cardinality_zero_to_many_nonunique.sdm  cardinality_zero_to_many_ordered.sdm  cardinality_zero_to_many_unique.sdm  cardinality_zero_to_many_unordered.sdm  cardinality_zero_to_one.sdm  constraint_formal_atomic_sentence.sdm  constraint_formal_binary_biconditional.sdm  constraint_formal_binary_conjunction.sdm  constraint_formal_binary_disjunction.sdm  (+135 more)
test/highlight/: another.sdm  constraints.sdm  datatypes.sdm  dimensions.sdm  imports.sdm  metrics.sdm  properties.sdm  sdml_sequence_ordered.sdm  simple.sdm  type_classes.sdm
test/tags/: constraints.sdm  datatypes.sdm  dimensions.sdm  imports.sdm  properties.sdm  sdml_sequence_ordered.sdm  simple.sdm
