[package]
name = "tree-sitter-sdml"
description = "sdml grammar for the tree-sitter parsing library"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.18"
keywords = ["incremental", "parsing", "sdml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-sdml"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
publish = true
autoexamples = false

build = "bindings/rust/build.rs"

include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
