[package]
name = "tree-sitter-sdml"
description = "sdml grammar for the tree-sitter parsing library"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.4.14"
keywords = ["parsing", "text-editors", "incremental", "tree-sitter", "sdml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-sdml"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
publish = true
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
