[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sdml"
description = "SDML grammar for tree-sitter"
version = "0.4.4"
keywords = ["incremental", "parsing", "tree-sitter", "sdml"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.file = "LICENSE"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-sdml"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
