[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sdml"
description = "SDML grammar for tree-sitter"
version = "0.4.7"
keywords = ["incremental", "parsing", "tree-sitter", "sdml"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-sdml"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
